nlb/nginx-ingress-controller.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
      labels: 
        name: nginx-ingress
    spec:
      containers:
        - image: nginx/nginx-ingress:1.6.1
          name: nginx-ingress-controller
          args:
            - -default-server-tls-secret=$(POD_NAMESPACE)/default-server-secret
            - -nginx-configmaps=$(POD_NAMESPACE)/nginx-configuration
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
