nlb/nginx-ingress-service.yml
# Layer 3/4 service to expose my Ingress Controller to the outside world.
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80 # This is the port exposed by the controller service.
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    name: nginx-ingress
