nlb/ingress-nodejs-new.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-node-new
  annotations:
    #kubernetes.io/ingress.class: "nsx"
    #ncp/use-regex: "True"
    nginx.org/rewrites: "serviceName=nodejs1 rewrite=/;"

spec:
  rules:
  - host: new.localhost
    http:
      paths:
        - path: /<<namespace>>/nodejs1
          backend:
            namespace: ns1
            serviceName: nodejs1
            servicePort: 80
